fix(DataPicker): Meta data area being pushed out of container

--- a/src/components/data-picker/DataPicker.css
+++ b/src/components/data-picker/DataPicker.css
@@ -4,6 +4,7 @@
 
 .ax-data-picker__dropdown {
   flex: 1 1 0%;
+  min-width: 0;
 }
 
 .ax-data-picker__link {
